--- a/RottenTomatoes/Base.lproj/Main.storyboard
+++ b/RottenTomatoes/Base.lproj/Main.storyboard
@@ -16,9 +16,15 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search Movies" id="i1s-Zn-mk8">
+                                    <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="110" id="qdx-9g-eSD" customClass="MovieCell" customModule="RottenTomatoes" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="110"/>
+                                        <rect key="frame" x="0.0" y="136" width="320" height="110"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="qdx-9g-eSD" id="Fc2-z1-xi9">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="109.5"/>
@@ -51,6 +57,9 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="MVL-KZ-U0I" appends="YES" id="aBK-We-f6H"/>
+                                </connections>
                             </tableView>
                             <view hidden="YES" alpha="0.0" contentMode="scaleToFill" id="pjo-sm-b2w">
                                 <rect key="frame" x="0.0" y="64" width="320" height="21"/>
@@ -90,6 +99,10 @@
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="MVL-KZ-U0I" appends="YES" id="G5P-4p-nfm"/>
+                        </connections>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="bAT-AP-SID"/>
                     <navigationItem key="navigationItem" title="Movies" id="lk8-KY-mdg"/>
@@ -97,10 +110,16 @@
                         <outlet property="boxOfficeButtonItem" destination="Afq-8J-81o" id="KeK-5z-TnI"/>
                         <outlet property="dvdButtonItem" destination="Xwj-AV-gJY" id="jNo-Zq-0lD"/>
                         <outlet property="errorView" destination="pjo-sm-b2w" id="5O8-iN-lyg"/>
+                        <outlet property="searchBar" destination="i1s-Zn-mk8" id="n6e-5g-IDe"/>
                         <outlet property="tableView" destination="LAj-8X-iYW" id="OSI-0u-975"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer cancelsTouchesInView="NO" id="MVL-KZ-U0I">
+                    <connections>
+                        <action selector="onTap:" destination="BYZ-38-t0r" id="s2A-3v-sfb"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="915" y="372"/>
         </scene>
